finished basic functionality, nothing special

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <button id="size">Etcher Sketcher</button>
+    <div class="options">
+        <button id="size">Etcher Sketcher</button>
+        <button id="reset">reset</button>
+    </div>
     <div id="sketchpad"></div>
 </body>
 </html>
